# voxel_worlds

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  vcpkg.json
.cache/clangd/index/: SDL.h.600CCE4DE63B3DCC.idx  SDL_assert.h.494EBFE89D7DC50B.idx  SDL_atomic.h.C94D449CC77AAC5E.idx  SDL_audio.h.AA6FE0497E50012C.idx  SDL_blendmode.h.8805CAD2E419ACBD.idx  SDL_clipboard.h.C8EFFB1DAD955195.idx  SDL_config.h.F2D47E9A65731B17.idx  SDL_cpuinfo.h.75643217DC44AB1B.idx  SDL_endian.h.D74E46525822410F.idx  SDL_error.h.BDAA489EBB6429AA.idx  SDL_events.h.E04B029E03F28E13.idx  SDL_filesystem.h.FBA85AC2C3DC07F9.idx  SDL_gamecontroller.h.51A07807EDA7BDA1.idx  SDL_gesture.h.DF087B2CE7F0DF7D.idx  SDL_guid.h.8D1E81EBA754FE90.idx  SDL_haptic.h.A580236A295563E4.idx  SDL_hidapi.h.442DE70FBC9ED954.idx  SDL_hints.h.789006BBA2504A51.idx  SDL_image.h.F57973B8FEB663AE.idx  SDL_joystick.h.60953346F6F506F5.idx  SDL_keyboard.h.C05343AFB06DEE1A.idx  SDL_keycode.h.80098B9ADDFA0112.idx  SDL_loadso.h.CCB2D829C418A58B.idx  SDL_locale.h.446BF682F7E6B04C.idx  SDL_log.h.9285EC40B0F68A0B.idx  SDL_main.h.0C1DB6B56D4CF0FA.idx  SDL_messagebox.h.F195ADFA948C088A.idx  SDL_metal.h.361A968234052F74.idx  SDL_misc.h.7E26B9D7FEF4F5EE.idx  SDL_mouse.h.ED73CCD1830BB3F2.idx  SDL_mutex.h.AA0945DE43DE443E.idx  SDL_pixels.h.9DFDD3CF7B429569.idx  SDL_platform.h.EADF74A2CE0C8523.idx  SDL_power.h.242FAB1806D76F1A.idx  SDL_quit.h.DF5E79FED862DAD0.idx  SDL_rect.h.1B9EB187C2901EF0.idx  SDL_render.h.ACF8D92AC65BBE1D.idx  SDL_rwops.h.61E3619A1E11B8D9.idx  SDL_scancode.h.5ED8515D677EBF97.idx  SDL_sensor.h.9D765430F931062E.idx  (+392 more)
include/: block_registry.hpp  block_texture_creator.hpp  block_types.hpp  blocks.hpp  camera.hpp  chunk.hpp  chunk_manager.hpp  chunk_progress.hpp  chunk_renderer_system.hpp  chunk_system.hpp  component.hpp  constant.hpp  entity_manager.hpp  game.hpp  graphics.hpp  group.hpp  line.hpp  mesh_data.hpp  model.hpp  model_component.hpp  model_manager.hpp  position_component.hpp  renderer_system.hpp  shader.hpp  texture.hpp  texture_manager.hpp  thread_pool.hpp  tuple_hash.hpp  utility.hpp  world.hpp
include/blocks/: block_registry.hpp  block_texture_creator.hpp  block_types.hpp  blocks.hpp
include/components/: block_break_event_component.hpp  block_event_component.hpp  block_place_event_component.hpp  bounding_box_collection_component.hpp  bounding_box_component.hpp  camera_component.hpp  chunk_model_component.hpp  chunk_state_component.hpp  chunk_storage_component.hpp  gravity_component.hpp  inventory_component.hpp  model_component.hpp  physics_component.hpp  player_controller_component.hpp  position_component.hpp
include/core/: component.hpp  entity_manager.hpp  event_manager.hpp  game.hpp  inputs.hpp  world.hpp
include/graphics/: graphics.hpp  model_component.hpp  texture.hpp
include/systems/: block_event_system.hpp  bounding_box_system.hpp  camera.hpp  chunk_bounding_creation_system.hpp  chunk_creation_system.hpp  chunk_meshing_system.hpp  chunk_renderer_system.hpp  chunk_unload_system.hpp  chunk_vertex_setup_system.hpp  collision_system.hpp  physics_system.hpp  player_controller_system.hpp  player_target_system.hpp  position_update_system.hpp  renderer_system.hpp  vertex_setup_system.hpp  world_generation_system.hpp
include/utility/: circle_loop.hpp  constant.hpp  open_simplex_noise2.hpp  perlin_noise.hpp  physics.hpp  spiral_loop.hpp  spline.hpp  thread_pool.hpp  tuple_hash.hpp  utility.hpp  world_generation.hpp
include/world/: chunk.hpp  chunk_manager.hpp  position_component.hpp  transform.hpp
lib/cmake/TBB/: TBBTargets.cmake
lib/pkgconfig/: tbb.pc
shaders/: frag.glsl  vert.glsl  vert2.glsl  vertInstanced.glsl
src/: block_registry.cpp  block_texture_creator.cpp  blocks.cpp  camera.cpp  chunk.cpp  chunk_manager.cpp  chunk_renderer_system.cpp  chunk_system.cpp  entity_manager.cpp  game.cpp  main.cpp  mesh_data.cpp  model_component.cpp  model_manager.cpp  position_component.cpp  renderer_system.cpp  shader.cpp  spiral_loop.cpp  texture_manager.cpp  thread_pool.cpp  world.cpp
src/blocks/: block_registry.cpp  block_texture_creator.cpp  blocks.cpp
src/core/: entity_manager.cpp  event_manager.cpp  game.cpp  world.cpp
src/graphics/: model_manager.cpp  shader.cpp
src/systems/: block_event_system.cpp  bounding_box_system.cpp  camera.cpp  chunk_bounding_creation_system.cpp  chunk_creation_system.cpp  chunk_meshing_system.cpp  chunk_renderer_system.cpp  chunk_unload_system.cpp  chunk_vertex_setup_system.cpp  collision_system.cpp  physics_system.cpp  player_controller_system.cpp  player_target_system.cpp  position_update_system.cpp  renderer_system.cpp  texture_manager.cpp  vertex_setup_system.cpp  world_generation_system.cpp
src/utility/: circle_loop.cpp  open_simplex_noise2.cpp  perlin_noise.cpp  physics.cpp  spiral_loop.cpp  spline.cpp  thread_pool.cpp  utility.cpp  world_generation.cpp
src/world/: chunk_manager.cpp
tests/: Makefile  multi_noise.cpp  multi_noise2.cpp  open_simplex.cpp  perlin.cpp  ray_casting.cpp
